    systems than the old 4M value was)
  * SBCL runs on SPARC systems now. (thanks to Christophe Rhodes' port
    of CMU CL's support for SPARC, and various endianness and other 
    SBCL portability fixes due to Christophe Rhodes and Dan Barlow)
  * new syntactic sugar for the Unix command line: --load foo.bar is now
    an alternate notation for --eval '(load "foo.bar")'.
  * bug fixes:
    ** The system now hunts for the C variable "environ" in a more
       devious way, to avoid segfaults when the C library version differs
       between compile time and run time. (thanks to Christophe Rhodes)
    ** INTEGER-valued CATCH tags now work. (thanks to Alexey Dejneka)
    ** The compiler no longer issues bogus style warnings for undefined
       classes in the same source file as the DEFCLASSes which defined
       them. (thanks to Stig E Sandoe for reporting and Martin Atzmueller
       for fixing this)
  * several changes related to debugging:
    ** suppression of tail recursion, as noted above
    ** The default implementation of TRACE has changed. :ENCAPSULATE T
       is now the default. (For some time encapsulation has been more
       reliable than the breakpoint-based :ENCAPSULATE NIL
       implementation, at least on X86 systems; and I just noticed that
       encapsulation also seems closer to the spirit of the ANSI
       specification.)
    ?? TRACE :ENCAPSULATE T now attaches a more informative debug
       name to its wrapper function objects than it used to

planned incompatible changes in 0.7.x:
* When the profiling interface settles down, maybe in 0.7.x, maybe
  later, it might impact TRACE. They both encapsulate functions, and
  it's not clear yet how e.g. UNPROFILE will interact with TRACE
  and UNTRACE. (This shouldn't matter, though, unless you are
  using profiling. If you never profile anything, TRACE should
  continue to behave as before.)
* Inlining can now be controlled the ANSI way, without
  MAYBE-INLINE, since the idiom