@@ -916,7 +916,7 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
              "%ATAN" "%ATAN2" "%ATANH"
              "%CALLER-FRAME-AND-PC" "%CHECK-BOUND" "%CLOSURE-FUN"
              "%CLOSURE-INDEX-REF" "%COS" "%COS-QUICK"
-             "%COSH" "%DEPOSIT-FIELD"
+             "%COSH" "%DEPOSIT-FIELD" "%DETECT-STACK-EXHAUSTION"
              "%DOUBLE-FLOAT" "%DPB" "%EXP" "%EXPM1"
              "%FIND-POSITION" "%FIND-POSITION-VECTOR-MACRO"
              "%FIND-POSITION-IF" "%FIND-POSITION-IF-VECTOR-MACRO"
